# shogi-kifu-rag

./: .env  .env.local_analyze  .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  mypy.ini  pyproject.toml  ruff.toml
.agents/playbooks/: playbook-deployment.md  playbook-new-kif-addition.md
.agents/skills/databricks-ai-functions/: SKILL.md
.agents/skills/databricks-ai-functions/references/: 1-task-functions.md  4-document-processing-pipeline.md
.agents/skills/databricks-aibi-dashboards/: SKILL.md
.agents/skills/databricks-apps-python/: SKILL.md
.agents/skills/databricks-apps-python/examples/: fm-minimal-chat.py  fm-parallel-calls.py  fm-structured-outputs.py
.agents/skills/python-coding-conventions/: SKILL.md
.agents/skills/qiita/: SKILL.md
.claude/skills/grill-me/: SKILL.md
.claude/skills/python-coding/: SKILL.md
.claude/skills/qiita/: SKILL.md
.claude/skills/tdd/: SKILL.md
.devin/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-feature.yml  02-bug.yml  03-task.yml  04-docs.yml
.github/actions/setup-databricks-cli/: actions.yml
.github/actions/setup-deps/: action.yml
.github/workflows/: README.md  cd.yml  ci-bundle-validate.yml  ci-integration-exec.yml  ci-integration.yml  ci-python-checks.yml  ci.yml  setup-deps.yml
code/local/src/: local_analyze.py
code/local/tests/: test_engine_analyzer.py  test_settings.py
code/remote/notebooks/: ntb_ui_demo.py  step2_silver_table.ipynb  step2_silver_table.py  step3_gold_table.ipynb  step3_gold_table.py  step4_floodgate.ipynb  step4_floodgate.py  step5_wikipedia.ipynb  step6_chromadb.ipynb  step6_chromadb.py  step7_rag_chain.ipynb  step7_rag_chain.py  step8_gradio_ui.ipynb  step8_gradio_ui.py
code/remote/pipelines/: gold_table.py  silver_table.py
code/shared/tests/: test_parser.py
data/kif_files/: sample.kif
data/output/: analysis.csv
databricks/pipelines/: gold_table.py  silver_table.py
databricks/resources/workflows/: jobs.yml  sdp_pipeline.yml
databricks_bundle/pipelines/: gold_table.py
databricks_bundle/resources/workflows/: jobs.yml  sdp_pipeline.yml
dbx_bundle/pipelines/: gold_table.py  silver_table.py  silver_transforms.py
dbx_bundle/resources/volumes/: test_data.yml
dbx_bundle/resources/workflows/: jobs.yml  sdp_pipeline.yml
dbx_bundle/setup/: 10_create.sql  20_grant.sql  grant.sql  init_catalog.sql  ntb_setup_environment.py
dbx_bundle/utils/: csv_utils.py
docs/: README.md  deployment_flow.md  development.md
docs/spec/: shogi_kifu_rag_spec.md
infrastructure/resources/libraries/: shared.yml
infrastructure/resources/notebooks/: step2_silver_table.yml  step3_gold_table.yml  step4_floodgate.yml  step5_wikipedia.yml  step6_chromadb.yml  step7_rag_chain.yml  step8_gradio_ui.yml
infrastructure/resources/workflows/: data_pipeline.yml  jobs.yml  sdp_pipeline.yml
local/src/: local_analyze.py
local/src/config/: settings.py
local/src/engine_analyzer/: analyzer.py
local/src/kif_parser/: __init__.py  parser.py
local/tests/: conftest.py  test_engine_analyzer.py  test_kif_parser.py  test_settings.py
remote/notebooks/: step2_silver_table.py  step3_gold_table.py  step4_floodgate.py  step5_wikipedia.py  step6_chromadb.py  step7_rag_chain.py  step8_gradio_ui.py
resources/: README.md
resources/libraries/: shared.yml
resources/notebooks/: step2_silver_table.yml  step3_gold_table.yml  step4_floodgate.yml  step5_wikipedia.yml  step6_chromadb.yml  step7_rag_chain.yml  step8_gradio_ui.yml
resources/workflows/: data_pipeline.yml
scripts/: activate-env.ps1  convert_to_notebook.py  create-env.ps1  export-requirements.ps1  fix_notebook.py  run-e2e-tests.ps1  run-integration-tests.ps1  switch-env.ps1  sync-env.ps1
scripts/github_issue/: create_issues.py  issue_content_sample.py  issue_definitions.py
shared/src/kif_parser/: __init__.py  parser.py
shared/tests/: test_parser.py
spec/: shogi_kifu_rag_spec_proto.md
src/shogi_kif_rag/: exceptions.py
src/shogi_kif_rag/jobs/: floodgate.py
src/shogi_kif_rag/kif/: local_analyze.py  schemas.py  utils.py
src/shogi_kif_rag/rag/: generator.py  llm_client.py  rag.py  retriever.py  secrets.py
src/shogi_kif_rag/tasks/: floodgate.py  wikipedia.py
src/shogi_kif_rag/transforms/: gold.py  silver.py
src/shogi_kif_rag/vector/: chromadb_service.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_e2e_pipeline.py
tests/fixtures/: tables.py
tests/helpers/: constants.py  csv_helpers.py  databricks_cli.py  expectations.py  job_monitoring.py  models.py  pipeline_helpers.py  schema_helpers.py  table_registry.py
tests/helpers/config/: __init__.py  constants.py  table_registry.py
tests/helpers/databricks/: __init__.py  cli.py  spark_fixture.py  volume_helpers.py
tests/helpers/monitoring/: __init__.py  job_monitoring.py  pipeline_helpers.py
tests/helpers/operations/: __init__.py  schema_helpers.py
tests/integration/: conftest.py  test_abnormal_input_data.py  test_execution_fooldgante_task.py  test_execution_main_job.py  test_execution_wikipedia.py  test_expectations_pipeline.py  test_gold_pipeline.py  test_gold_tables.py  test_pipeline_expectations.py  test_silver_pipeline.py  test_silver_tables.py
tests/integration-exec/: __init__.py  test_execution_wikipedia.py
tests/integration-exec/fixtures/: __init__.py
tests/integration/fixtures/: job_execution.py  scenarios.py
tests/integration_exec/: conftest.py  test_abnormal_configuration.py  test_abnormal_pipeline_failures.py  test_execution_fooldgante_task.py  test_execution_main_job.py
tests/integration_exec/fixtures/: config_validation.py
tests/remote/: README.md  __init__.py  conftest.py  test_chromadb.py  test_gold_table.py  test_rag_chain.py  test_silver_table.py
tests/scripts/: run_integration_tests.py  setup_test_data_volume.py
tests/shogi_kif_rag/kif/: conftest.py  test_local_analyze.py
tests/shogi_kif_rag/rag/: conftest.py  test_llm_client.py
tests/shogi_kif_rag/tasks/: test_foodgate.py
tests/shogi_kif_rag/vector/: test_chromadb_servies.py
tests/unit/: conftest.py
(+69 files in other folders)
