[project]
name = "shogi-kif-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "python-shogi",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "chardet>=7.4.3",
]

[dependency-groups]
pyspark = [
    "pyspark",
]

dbx = [
    "databricks-connect>=15.4,<15.5",
    "chromadb",
    "sentence-transformers",
    "requests",
    "beautifulsoup4",
    "gradio",
    "google-generativeai",
    "groq",
    "databricks-sdk",
]

devTools = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
floodgate = "shogi_kif_rag.tasks.floodgate:main"
wikipedia = "shogi_kif_rag.tasks.wikipedia:main"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
exclude = ["*.ipynb", "ntb_*.py"]

[tool.ruff.lint.per-file-ignores]
"databricks/pipelines/*.py" = ["F821"]